# GlacierDiskInfo

./: Cargo.toml  README.md  dev.spikehd.GlacierDiskInfo.yml
.github/workflows/: build-gui.yml  build-info.yml  build-mark.yml  build.yml  format.yml  publish-gui.yml  publish-lib.yml
cli/: Cargo.toml
glacierdiskinfo/: Cargo.toml  Dioxus.toml
glacierdiskinfo/assets/: driveattrtable.css  driveinfotable.css  main.css
glacierdiskinfo/src/: assets.rs  main.rs
glacierdiskinfo/src/data/: disk_cache.rs  mod.rs  smart.rs
glacierdiskinfo/src/ui/: drive.rs  drive_attr_table.rs  drive_info_table.rs  drive_tabs.rs
glacierdiskinfo/src/util/: menu.rs  mod.rs  theme.rs
glacierdiskmark/: Cargo.toml  Dioxus.toml
glacierdiskmark/assets/: buttons.css  main.css  results.css
glacierdiskmark/src/: assets.rs  main.rs
glacierdiskmark/src/ui/: buttons.rs  mod.rs  results.rs
glacierdiskmark/src/util/: bench.rs  menu.rs  mod.rs
gui/: Cargo.toml  Dioxus.toml
gui/assets/: drive.css  driveattrtable.css  driveinfotable.css  drivetabs.css  main.css
gui/src/: assets.rs  main.rs
gui/src/data/: attributes.rs  mod.rs  smart.rs  status.rs
gui/src/ui/: drive.rs  drive_attr_table.rs  drive_info_table.rs  drive_tabs.rs  mod.rs
gui/src/util/: config.rs  conversion.rs  menu.rs  mod.rs  root.rs  theme.rs
lib/: Cargo.toml  README.md
lib/examples/: bench_read_rand.rs  bench_read_seq.rs  bench_rw_rand.rs  bench_rw_seq.rs  bench_write_rand.rs  bench_write_seq.rs  dump.rs  dump_all.rs  dump_rs.rs  list.rs  read_seq_benchmark.rs  rw_seq.rs  temperature.rs  write_seq_benchmark.rs
lib/src/: ata.rs  attribute.rs  disk.rs  kind.rs  lib.rs  sysfs.rs
lib/src/benchmark/: benchmark.rs  mod.rs  read.rs  read_sequential.rs  write.rs  write_sequential.rs
shared/: Cargo.toml
shared/src/: config.rs  convert.rs  lib.rs  root.rs  theme.rs
themes/glacierdiskinfo/: kurei_kei_unofficial.css
