[package]
name = "glacier-disk-info"
version = "0.5.1"
authors = ["SpikeHD <25207995+SpikeHD@users.noreply.github.com>"]
edition = "2021"

[profile.release]
lto = true
strip = "debuginfo"
opt-level = 3

[dependencies]
base64 = "0.22.1"
dialog = "0.3.0"
dioxus = { version = "0.6.3", features = [] }
dioxus-desktop = "0.6.3"
dioxus-native = { git = "https://github.com/DioxusLabs/blitz/", branch = "main" }
dirs = "6.0.0"
libglacierdisk = { path = "../lib" }
open = "5.3.2"
shared = { path = "../shared" }
sudo = "0.6.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
