[package]
name = "glacierdisk-gui"
version = "0.1.1"
authors = ["SpikeHD <25207995+SpikeHD@users.noreply.github.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = [] }
libglacierdisk = { path = "../lib" }
sudo = "0.6.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
