[package]
name = "glacierdisk-gui"
version = "0.1.2"
authors = ["SpikeHD <25207995+SpikeHD@users.noreply.github.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = [] }
dirs = "6.0.0"
libglacierdisk = { path = "../lib" }
regex = "1.11.1"
serde = "1.0.217"
sudo = "0.6.0"
toml = "0.8.20"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
