[package]
name = "glacierdisk-gui"
version = "0.4.0"
authors = ["SpikeHD <25207995+SpikeHD@users.noreply.github.com>"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
dialog = "0.3.0"
dioxus = { version = "0.6.3", features = [] }
dioxus-desktop = "0.6.3"
dirs = "6.0.0"
libglacierdisk = { path = "../lib" }
open = "5.3.2"
regex = "1.11.1"
serde = "1.0.217"
sudo = "0.6.0"
toml = "0.8.20"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
