[package]
name = "libglacierdisk"
version = "0.5.1"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A linux library for reading SMART (and other) data from disks"
repository = "https://github.com/SpikeHD/GlacierDiskInfo"
keywords = ["smart", "disk", "ata", "libatasmart"]
categories = ["hardware-support"]

[dependencies]
libatasmart = "0.3.2"
libatasmart-sys = "0.2.1"
num_cpus = "1.16.0"

[dev-dependencies]
sudo = "0.6.0"
