[package]
name = "libglacierdisk"
version = "0.6.1"
authors = ["SpikeHD <25207995+SpikeHD@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A linux library for reading disk data and benchmarking"
homepage = "https://github.com/SpikeHD/GlacierDiskInfo"
repository = "https://github.com/SpikeHD/GlacierDiskInfo"
keywords = ["smart", "disk", "ata", "libatasmart"]
categories = ["hardware-support"]

[dependencies]
libatasmart = "0.3.2"
libatasmart-sys = "0.2.1"
num_cpus = "1.16.0"
rand = "0.9.0"

[dev-dependencies]
sudo = "0.6.0"
